Fix funky diff padding to make diffs fully readable.
Test case: http://meta.brickimedia.org/index.php?title=Forum:Games_(2)_and_Answers_Wikis&diff=next&oldid=195077 (or basically any diff)

Tested in Internet Explorer 8.0 and Opera 20.0 (under WinXP) and this is definitely an improvement on both platforms.

--- a/refreshed/main.css
+++ b/refreshed/main.css
@@ -713,3 +713,8 @@ h6 {
 	-moz-box-shadow: none !important;
 	box-shadow: none !important;
 }
+
+/* Fix funky diff padding to make diffs fully readable */
+td.diff-addedline .diffchange, td.diff-deletedline .diffchange {
+	padding: 0;
+}
